# notion-sports-schedules

./: .gitignore  mypy.ini  pyproject.toml
app/: constants.py  f1_schedule.py  indycar_schedule.py  main.py  manual_additions.py  mlb_schedule.py  nba_schedule.py  ncaa_bball_schedule.py  ncaa_bball_tournament_schedule.py  nhl_schedule.py  shared.py  soccer_schedule.py  upsert strategy.txt
app/models/: f1.py  indycar.py  mlb.py  nba.py  ncaa_bball.py  ncaa_bball_tournament.py  ncaa_game.py  nhl.py  nhl_espn.py  notion_game.py  soccer.py
app/models/deprecated/: nhl.py
app/utils/: __init__.py  assemblers.py  notion_scheduler.py
examples/: mlb.json  nba.json  nhl.json  soccer_matches.json
examples/soccer/: soccer.json  soccer_leagues.json
scripts/: run_all_sports.sh  run_hockey.sh
tests/: test_soccer_schedule.py
tests/assemblers/: test_assemblers.py
