[tool.poetry]
name = "sports-schedules"
version = "0.0.1"
description = "An app to fetch watchablity information for sports"
authors = ["Mark Reckard <mark.reckard@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
shared-items = {git = "ssh://git@github.com/marker004/notion_shared_items.git"}
# shared-items = {path = "../shared-items/dist/shared_items-0.0.1-py3-none-any.whl", develop = true}
pydantic = "^1.10.5"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
black = "^23.1.0"
types-requests = "^2.28.11.13"
pytest = "^7.2.1"
