[tool.poetry]
name = "sports-schedules"
version = "0.0.1"
description = "An app to fetch watchablity information for sports"
authors = ["Mark Reckard <mark.reckard@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
pydantic = "^1.10.5"
requests = "^2.28.2"
shared-items = {git = "ssh://git@github.com/marker004/notion_shared_items.git", tag = "0.0.6" }
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.11.2"
unidecode = "^1.3.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
black = "^23.1.0"
types-requests = "^2.28.11.13"
pytest = "^7.2.1"
types-beautifulsoup4 = "^4.11.6.7"
types-python-dateutil = "^2.8.19.10"
